Fix overflowing title in goods block

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -14,7 +14,7 @@
 }
 
 .contacts__link {
-  font-family: "PTMono", "PTSans", monospace;
+  font-family: "PTMono", "Courier New", monospace;
   color: $color-transparent;
   font-style: normal;
 }
