--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -59,7 +59,7 @@
 }
 
 .nav__link {
-  font-family: "PTMono", "PTSans", monospace;
+  font-family: "PTMono", "Courier New", monospace;
   font-style: normal;
   color: $color-transparent;
   flex-grow: 0;
