--- a/source/sass/blocks/question-form.scss
+++ b/source/sass/blocks/question-form.scss
@@ -35,7 +35,7 @@
 
 .question-form input {
   width: 100%;
-  font-family: "PTMono", "PTSans", monospace;
+  font-family: "PTMono", "Courier New", monospace;
   color: $color-alice-blue;
   border: none;
   border-radius: 4px;
@@ -55,7 +55,7 @@
 .question-form textarea {
   width: 100%;
   margin-top: 10px;
-  font-family: "PTMono", "PTSans", monospace;
+  font-family: "PTMono", "Courier New", monospace;
   color: $color-alice-blue;
   border: none;
   border-radius: 4px;
