--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -3,7 +3,7 @@
   font-weight: 400;
   font-family: "PTMono";
   font-display: swap;
-  src: url("../fonts/PTMono.woff2") format("woff2");
+  src: url("../fonts/ptmono.woff2") format("woff2");
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-weight: 400;
   font-family: "RobotoCondensed";
   font-display: swap;
-  src: url("../fonts/RobotoCondensed-Regular.woff2") format("woff2");
+  src: url("../fonts/robotocondensed-regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -19,5 +19,5 @@
   font-weight: 700;
   font-family: "RobotoCondensed";
   font-display: swap;
-  src: url("../fonts/RobotoCondensed-Bold.woff2") format("woff2");
+  src: url("../fonts/robotocondensed-bold.woff2") format("woff2");
 }
