--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -85,7 +85,7 @@ html {
 }
 
 .description {
-  font-family: "PTMono", "PTSans", monospace;
+  font-family: "PTMono", "Courier New", monospace;
 }
 
 .list {
@@ -99,7 +99,7 @@ html {
 }
 
 .input {
-  font-family: "PTMono", "PTSans", monospace;
+  font-family: "PTMono", "Courier New", monospace;
   color: $color-alice-blue;
   border: none;
   border-radius: 4px;
